--- a/learning machine learning/learning machine learning.csproj
+++ b/learning machine learning/learning machine learning.csproj
@@ -8,4 +8,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ScottPlot" Version="5.0.12-beta" />
+    <PackageReference Include="ScottPlot.WinForms" Version="5.0.12-beta" />
+  </ItemGroup>
+
 </Project>
